--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="libs/amqp-client-3.3.4.jar"/>
+	<classpathentry kind="lib" path="libs/amqp-client-3.3.4.jar" sourcepath="D:/apache-maven-3.3.9/repository/com/rabbitmq/amqp-client/3.5.4/amqp-client-3.5.4-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
