--- a/src/rabbitmq.properties
+++ b/src/rabbitmq.properties
@@ -3,5 +3,6 @@ password=guest
 hostName=localhost
 portNumber=5672
 virtualHost=test
-exchangeName=exchange
+directExchangeName=exchange
 routingKey=sss
+fanoutExchangeName=amq.fanout
